[package]
name = "animus-transport-http"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
description = "HTTP REST transport plugin for Animus — exposes daemon control as /api/v1/* endpoints"
repository = "https://github.com/launchapp-dev/animus-transport-http"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
authors = ["Launchapp.dev"]

[[bin]]
name = "animus-transport-http"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
animus-plugin-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-transport-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-control-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8", features = ["client"] }
animus-plugin-runtime = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
